commit on 'main'

--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en-us">
 
 <head>
     <title> Resume</title>
@@ -129,6 +130,7 @@
     <p>
         Location: Calgary, AB
     </p>
+
     <!--    <table style="width:100%">
         <tr class="heading3">
             <td>365 Patrol Ltd.</td>
@@ -178,3 +180,5 @@
         ------ x ------
     </div>
 </body>
+
+</html>
