commit on 'main'

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 
 <head>
-    <title>Rav Portfolio</title>
-    <link href="portfolio.css" rel="stylesheet" type="text/css">
+    <title>Rav Contact</title>
+    <link href="contact.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@300;400&display=swap" rel="stylesheet">
@@ -11,14 +11,12 @@
 
 <body>
     <ul>
-        <li><a href="contact.html">Contact me</a></li>
+        <li><a class="selected" href="contact.html">Contact me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a class="selected" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
     </ul>
-
-    <div id="heading1Name">HELLO</div>
-    <div id="heading2Name">I'M <span id="heading3Name">RAV</span></div>
+    <p>Here Contacts</p>
 
 
 </body>
