--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <div>
+        <ul class="navtab">
+            <li class="navtab"><a class="selected" href="contact.html">Contact me</a></li>
+            <li class="navtab"><a class="selected" href="projects.html">Projects</a></li>
+            <li class="navtab"><a class="selected" id="thisnav" href="resume.html">Resume</a></li>
+            <li class="navtab"><a class="selected" href="index.html">Home</a></li>
+        </ul>
+    </div>
     <div id="fullname" class="info">SAURAV ADHIKARI</div>
     <hr class="inheading">
     <div class="row1">
