commit on 'main'

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a class="selected" href="index.html">Home</a></li>
     </ul>
+    <div class="textonscreen">
+        <div id="heading1Name">HELLO</div>
+        <div id="heading2Name">I'M <span id="heading3Name">RAV</span></div>
+        <div id="heading4Name">A SOFTWARE DEVELOPER</div>
 
-    <div id="heading1Name">HELLO</div>
-    <div id="heading2Name">I'M <span id="heading3Name">RAV</span></div>
-
+    </div>
 
 </body>
 
