--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-    <ul>
+    <!-- <ul>
         <li><a href="contact.html">Contact me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a class="selected" href="index.html">Home</a></li>
-    </ul>
+    </ul> -->
+    <div class="leftonscreen">
+        <a href="resume.html">Resume</a>
+    </div>
     <div class="textonscreen">
         <div id="heading1Name">HELLO</div>
         <div id="heading2Name">I'M <span id="heading3Name">RAV</span></div>
@@ -23,6 +26,9 @@
 
     </div>
 
+    <div class="rightonscreen">
+        <a href="projects.html">Projects</a>
+    </div>
 </body>
 
 </html>
