commit on 'main'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a class="selected" href="index.html">Home</a></li>
     </ul> -->
     <div class="leftonscreen">
-        <a href="resume.html">Resume</a>
+        <a href="resume.html">▶Resume</a>
     </div>
     <div class="textonscreen">
         <div id="heading1Name">HELLO</div>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="rightonscreen">
-        <a href="projects.html">Projects</a>
+        <a href="projects.html">▶Projects</a>
     </div>
 </body>
 
