commit on 'main'

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@300;400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/67a9b87715.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,17 +18,20 @@
         <li><a class="selected" href="index.html">Home</a></li>
     </ul> -->
     <div class="leftonscreen">
-        <a href="resume.html">▶Resume</a>
+        <a class="sidebars" href="resume.html">▶Resume</a>
     </div>
     <div class="textonscreen">
         <div id="heading1Name">HELLO</div>
         <div id="heading2Name">I'M <span id="heading3Name">RAV</span></div>
         <div id="heading4Name">A SOFTWARE DEVELOPER</div>
-
+        <div class="sociallinks">
+            <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/saurav-adhikari-7288261bb/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a id="github" href="https://github.com/shashayabuddha" target="_blank"><i class="fab fa-github fa-2x"></i></i></a>
+        </div>
     </div>
 
     <div class="rightonscreen">
-        <a href="projects.html">▶Projects</a>
+        <a class="sidebars" href="projects.html">▶Projects</a>
     </div>
 </body>
 
