commit on 'main'

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,18 @@
     </ul>
     <p>Here Projects</p>
 
+    <div class="project-container">
+        <div>1
+            <div>
+                <a href="/" </div>
+            </div>
+            <div>2
 
+            </div>
+            <div>3
+
+            </div>
+        </div>
 </body>
 
 </html>
