--- a/projects.html
+++ b/projects.html
@@ -16,20 +16,74 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="index.html">Home</a></li>
     </ul>
-    <p>Here Projects</p>
+    <div class="webjava">Websites</div>
 
     <div class="project-container">
-        <div>1
+        <div class="subblock" id="project1">
+            Cafe Europa
             <div>
-                <a href="/" </div>
-            </div>
-            <div>2
-
-            </div>
-            <div>3
-
-            </div>
+                <a class="linkbutton" id="livepreview" href="/Cafe Europa/lab4.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/Cafe%20Europa/lab4.html" target="_blank"> Code</a></div>
         </div>
+
+        <div class="subblock" id="project2">
+            Metric Converter
+            <div>
+                <a class="linkbutton" id="livepreview" href="/UnitConverter/conversion.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/UnitConverter/conversion.html" target="_blank"> Code</a></div>
+        </div>
+        <div class="subblock" id="project3">
+            David Thompson
+            <div>
+                <a class="linkbutton" id="livepreview" href="/CSS_Form/parta.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/parta.html" target="_blank"> Code</a></div>
+        </div>
+    </div>
+
+    <div class="project-container">
+        <div class="subblock" id="project4">
+            WC. Grocers Form
+            <div>
+                <a class="linkbutton" id="livepreview" href="/CSS_Form/partb.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/partb.html" target="_blank"> Code</a></div>
+        </div>
+
+        <div class="subblock" id="project5">
+            ...
+            <div>
+                <a class="linkbutton" id="livepreview" href="/UnitConverter/conversion.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/UnitConverter/conversion.html" target="_blank"> Code</a></div>
+        </div>
+        <div class="subblock" id="project6">
+            ...
+            <div>
+                <a class="linkbutton" id="livepreview" href="/CSS_Form/parta.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/parta.html" target="_blank"> Code</a></div>
+        </div>
+    </div>
+
+    <div class="webjava">Java</div>
+    <div class="project-container">
+        <div class="subblock" id="project7">
+            ...
+            <div>
+                <a class="linkbutton" id="livepreview" href="/CSS_Form/partb.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/partb.html" target="_blank"> Code</a></div>
+        </div>
+
+        <div class="subblock" id="project8">
+            ...
+            <div>
+                <a class="linkbutton" id="livepreview" href="/UnitConverter/conversion.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/UnitConverter/conversion.html" target="_blank"> Code</a></div>
+        </div>
+        <div class="subblock" id="project9">
+            ...
+            <div>
+                <a class="linkbutton" id="livepreview" href="/CSS_Form/parta.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/parta.html" target="_blank"> Code</a></div>
+        </div>
+    </div>
 </body>
 
 </html>
