commit on 'main'

--- a/projects.html
+++ b/projects.html
@@ -49,10 +49,10 @@
         </div>
 
         <div class="subblock" id="project5">
-            ...
+            Wild Rose Finance
             <div>
-                <a class="linkbutton" id="livepreview" href="/UnitConverter/conversion.html" target="_blank"> Live Preview</a>
-                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/UnitConverter/conversion.html" target="_blank"> Code</a></div>
+                <a class="linkbutton" id="livepreview" href="/WildRose/lab6.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/WildRose/lab6.html" target="_blank"> Code</a></div>
         </div>
         <div class="subblock" id="project6">
             ...
