commit on 'main'

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,15 @@
     </ul>
     <div class="webjava">Websites</div>
 
+
     <div class="project-container">
+        <div class="subblock" id="project5">
+            Wild Rose Finance
+            <div>
+                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/Widrose_v2/lab7.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/Widrose_v2/lab7.html" target="_blank"> Code</a></div>
+        </div>
+
         <div class="subblock" id="project1">
             Cafe Europa
             <div>
@@ -32,15 +40,33 @@
                 <a class="linkbutton" id="livepreview" href="/UnitConverter/conversion.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/UnitConverter/conversion.html" target="_blank"> Code</a></div>
         </div>
-
-        <div class="subblock" id="project5">
-            Wild Rose Finance
-            <div>
-                <a class="linkbutton" id="livepreview" href="/WildRose/lab6.html" target="_blank"> Live Preview</a>
-                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/WildRose/lab6.html" target="_blank"> Code</a></div>
-        </div>
     </div>
 
+
+    <div class="project-container">
+        <div class="subblock" id="project7">
+            New City Bakeries
+            <div>
+                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/newcitybakeries/bakery.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/newcitybakeries/bakery.html" target="_blank"> Code</a></div>
+        </div>
+
+        <div class="subblock" id="project8">
+            Currency Converter
+            <div>
+                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/currencyconverter/currencyconverter.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/currencyconverter/currencyconverter.html" target="_blank"> Code</a></div>
+        </div>
+
+
+        <div class="subblock" id="project9">
+            Kananaskis Travel
+            <div>
+                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/travelsite/travel.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/travelsite/travel.html" target="_blank"> Code</a></div>
+        </div>
+    </div>
+    <!-- 
     <div class="project-container">
         <div class="subblock" id="project4">
             WC. Grocers Form
@@ -63,7 +89,7 @@
                 <a class="linkbutton" id="livepreview" href="/CSS_Form/parta.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/CSS_Form/parta.html" target="_blank"> Code</a></div>
         </div>
-    </div>
+    </div> -->
 
     <div class="webjava">Java</div>
     <div class="project-container">
