--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         <div class="subblock" id="project5">
             Wild Rose Finance
             <div>
-                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/Widrose_v2/lab7.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" id="livepreview" href="/Widrose_v2/lab7.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/Widrose_v2/lab7.html" target="_blank"> Code</a></div>
         </div>
 
@@ -47,14 +47,14 @@
         <div class="subblock" id="project7">
             New City Bakeries
             <div>
-                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/newcitybakeries/bakery.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" id="livepreview" href="/projectgroup1/newcitybakeries/bakery.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/newcitybakeries/bakery.html" target="_blank"> Code</a></div>
         </div>
 
         <div class="subblock" id="project8">
             Currency Converter
             <div>
-                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/currencyconverter/currencyconverter.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" id="livepreview" href="/projectgroup1/currencyconverter/currencyconverter.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/currencyconverter/currencyconverter.html" target="_blank"> Code</a></div>
         </div>
 
@@ -62,7 +62,7 @@
         <div class="subblock" id="project9">
             Kananaskis Travel
             <div>
-                <a class="linkbutton" id="livepreview" href="/shashayabuddha.github.io/projectgroup1/travelsite/travel.html" target="_blank"> Live Preview</a>
+                <a class="linkbutton" id="livepreview" href="/projectgroup1/travelsite/travel.html" target="_blank"> Live Preview</a>
                 <a class="linkbutton" href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/projectgroup1/travelsite/travel.html" target="_blank"> Code</a></div>
         </div>
     </div>
