--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,8 @@
 <html lang="en-us">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Resume</title>
     <link href="resume.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,9 +32,9 @@
         </div>
     </div>
 
-    <p class="heading"><a id="bottomline">CORE STRENGTHS</a></p>
+    <!-- <p class="heading"><a id="bottomline">CORE STRENGTHS</a></p>
 
-    <div>
+    <div class="long-text">
         <div class="list">
             Excellent personal motivation to build and work collaboratively and independently
         </div>
@@ -51,7 +53,7 @@
         <div class="list">
 
         </div>
-    </div>
+    </div> -->
 
     <p class="heading">EDUCATION</p>
     <div>
