commit on 'main'

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </section>
 
-    <!-- ***********************  WORK EXPERIENCE  *********************** -->
+    <!-- ***********************  RESUME  *********************** -->
     <section class="resume-content" id="resume-content">
         <div class="content-wrap item-details divider">
 
