commit on 'main'

--- a/index.html
+++ b/index.html
@@ -233,12 +233,13 @@
                     → October 2020 - Present
                 </div>
             </div>
-            <p>
+            <!-- <p>
                 Location: Calgary, AB
-            </p>
+            </p> -->
         </div>
     </section>
 
+    <div id="triangle"></div>
     <div class="bottom-tab"></div>
     <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
     <div>
