commit on 'main'

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <hr class="inheading">
             <div class="row1">
                 <div class="column1">
-                    <p><strong>Phone#</strong> (587) 889-7999</p>
+                    <p><strong>Country:</strong> Canada</p>
                 </div>
                 <div class="column1">
                     <p><strong>Email:</strong> srvadhikariii@gmail.com</p>
