Java project added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="heading4Name">A SOFTWARE DEVELOPER</div>
             <div class="sociallinks">
                 <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/saurav-adhikari-7288261bb/"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a id="github" href="https://github.com/shashayabuddha" target="_blank"><i class="fab fa-github fa-2x"></i></i></a>
+                <a id="github" href="https://github.com/rav-coder" target="_blank"><i class="fab fa-github fa-2x"></i></i></a>
             </div>
         </div>
 
@@ -46,9 +46,9 @@
         <div class="content-wrap divider">
             <h2>Featured Projects</h2>
             <p>
-                <span class="lang-used"> HTML5</span>
-                <span class="lang-used"> CSS3</span>
-                <span class="lang-used"> JavaScript</span>
+                <span class="lang-used"> Java</span>
+                <span class="lang-used"> MySQL</span>
+                <span class="lang-used"> AWS</span>
             </p>
 
             <p>
@@ -58,26 +58,43 @@
             </p>
 
             <p>
-                <span class="lang-used"> Java</span>
-                <span class="lang-used"> SQL</span>
-                <span class="lang-used"> Adobe XD</span>
+                <!-- <span class="lang-used"> Java</span>
+                <span class="lang-used"> SQL</span> -->
+                <!-- <span class="lang-used"> Adobe XD</span> -->
             </p>
+
+            <!-- <section> block to add more projects. -->
+            <section class="project-item">
+                <img src="images/homeinven.png" alt="home-inventory-project">
+                <h3>Home Inventory</h3>
+                <p>
+                    <!-- <span class="lang-internal"> HTML5</span>
+                        <span class="lang-internal"> CSS3</span>
+                        <span class="lang-internal"> JavaScript</span> -->
+                    <span class="lang-internal"> Java</span>
+                    <span class="lang-internal"> MySQL</span>
+                    <span class="lang-internal"> AWS</span>
+                </p>
+                <p>This web application lets users manage a list of their inventory. Admins can view user information and manage users. Login and inventory information is stored on a MySQL database. This application is hosted on AWS.
+                </p>
+                <a href="http://homeinventoy-env.eba-xw3qmbr6.us-west-2.elasticbeanstalk.com/" target="_blank">Live Preview</a>
+                <a href="https://github.com/rav-coder/home-inventory/tree/main/final-project-shashayabuddha-master" target="_blank" id="code-link">Code</a>
+            </section>
+            <!-- End of Project block. -->
 
             <!-- <section> block to add more projects. -->
             <section class="project-item">
                 <img src="images/pdatasets.png" alt="description of image">
                 <h3>City of Calgary Datasets</h3>
                 <p>
-                    <span class="lang-internal"> HTML5</span>
-                    <span class="lang-internal"> CSS3</span>
-                    <span class="lang-internal"> JavaScript</span>
                     <span class="lang-internal"> AJAX</span>
                     <span class="lang-internal"> JSON</span>
+
                 </p>
                 <p>This website lets the user search and view data from four different JSON files located in the City of Calgary website. Searches can be made based on location, region, date, etc. Datasets that retrieve a longitude and latitude value can
                     be seen on google maps.</p>
                 <a href="/finalproject/datasets/index.html" target="_blank">Live Preview</a>
-                <a href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/finalproject/datasets/index.html" target="_blank" id="code-link">Code</a>
+                <a href="https://github.com/rav-coder/rav-coder.github.io/blob/main/finalproject/datasets/index.html" target="_blank" id="code-link">Code</a>
             </section>
             <!-- End of Project block. -->
 
@@ -86,9 +103,9 @@
                 <img src="images/pquiz.png" alt="description of image">
                 <h3>Programming Quiz</h3>
                 <p>
-                    <span class="lang-internal"> HTML5</span>
+                    <!-- <span class="lang-internal"> HTML5</span>
                     <span class="lang-internal"> CSS3</span>
-                    <span class="lang-internal"> JavaScript</span>
+                    <span class="lang-internal"> JavaScript</span> -->
                     <span class="lang-internal"> AJAX</span>
                     <span class="lang-internal"> XML</span>
                 </p>
@@ -96,7 +113,7 @@
                     displayed.
                 </p>
                 <a href="/finalproject/quiz/quiz.html" target="_blank">Live Preview</a>
-                <a href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/finalproject/quiz/quiz.html" target="_blank" id="code-link">Code</a>
+                <a href="https://github.com/rav-coder/rav-coder.github.io/blob/main/finalproject/quiz/quiz.html" target="_blank" id="code-link">Code</a>
             </section>
             <!-- End of Project block. -->
 
@@ -105,15 +122,15 @@
                 <img src="images/pdodgy.png" alt="description of image">
                 <h3>Dodgy Brakes Car Rental</h3>
                 <p>
-                    <span class="lang-internal"> HTML5</span>
+                    <!-- <span class="lang-internal"> HTML5</span>
                     <span class="lang-internal"> CSS3</span>
-                    <span class="lang-internal"> JavaScript</span>
+                    <span class="lang-internal"> JavaScript</span> -->
                     <span class="lang-internal"> AJAX</span>
                     <span class="lang-internal"> JSON</span>
                 </p>
                 <p>Users are able to search for their name in the dodgy brakes car rental database. If their name is found, a rental form can be opened where their personal information is pre-filled and users can fill in the rental information.</p>
                 <a href="/finalproject/rentalcar/index.html" target="_blank">Live Preview</a>
-                <a href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/finalproject/rentalcar/index.html" target="_blank" id="code-link">Code</a>
+                <a href="https://github.com/rav-coder/rav-coder.github.io/blob/main/finalproject/rentalcar/index.html" target="_blank" id="code-link">Code</a>
             </section>
             <!-- End of Project block. -->
 
@@ -128,7 +145,7 @@
                 </p>
                 <p>This is an online form for Wild Rose Country Finance. This form receives user inputs, validates them and displays the information back to the user. Multiple clients and their information can be added, deleted and also edited.</p>
                 <a href="/Widrose_v2/lab7.html" target="_blank">Live Preview</a>
-                <a href="https://github.com/shashayabuddha/shashayabuddha.github.io/blob/main/Widrose_v2/lab7.html" target="_blank" id="code-link">Code</a>
+                <a href="https://github.com/rav-coder/rav-coder.github.io/blob/main/Widrose_v2/lab7.html" target="_blank" id="code-link">Code</a>
             </section>
             <!-- End of Project block. -->
         </div>
