commit on 'main'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul> -->
     <div class="onePage">
         <div class="leftonscreen">
-            <a class="sidebars" href="#resume-content">▶Resume</a>
+            <a class="sidebars" target="_blank" href="https://drive.google.com/file/d/1GxNKlYBgpkZ6dwg53AgeRvYVu2FoueBX/view?usp=sharing">▶Resume</a>
         </div>
         <div class="textonscreen">
             <div id="heading1Name">HELLO</div>
@@ -152,7 +152,7 @@
     </section>
 
     <!-- ***********************  RESUME  *********************** -->
-    <section class="resume-content" id="resume-content">
+    <!-- <section class="resume-content" id="resume-content">
         <div class="content-wrap item-details divider">
 
             <div id="fullname" class="info">SAURAV ADHIKARI</div>
@@ -249,12 +249,12 @@
                 <div class="flex-item-right">
                     → October 2020 - Present
                 </div>
-            </div>
-            <!-- <p>
+            </div> -->
+    <!-- <p>
                 Location: Calgary, AB
             </p> -->
-        </div>
-    </section>
+    <!-- </div>
+    </section> -->
 
     <div id="triangle"></div>
     <div class="bottom-tab"></div>
@@ -266,7 +266,7 @@
             <!-- Social media and contact links. Add or remove any networks. -->
             <ul class="contact-list">
                 <li><a href="mailto:srvadhikariii@gmail.com">SRVADHIKARIII@GMAIL.COM</a></li>
-                <li><a href="https://github.com/shashayabuddha" target="_blank">GITHUB</a></li>
+                <li><a href="https://github.com/rav-coder" target="_blank">GITHUB</a></li>
                 <li><a href="https://www.linkedin.com/in/saurav-adhikari-7288261bb/" target="_blank">LINKEDIN</a></li>
             </ul>
             <div class="bottom-tab"></div>
