--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </div> -->
     </div>
 
-    <div class="bottom-tab" id="projects-top">-</div>
-    <div class="bottom-tab">-</div>
+    <div class="bottom-tab" id="projects-top">&nbsp;</div>
+    <div class="bottom-tab">&nbsp;</div>
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
     <section class="projects" id="projects">
@@ -105,7 +105,7 @@
                 <p>
                     Volunteer Management System: Centralized job postings, scheduling, and reporting.  
                 </p>
-                <a href="https://github.com/rav-coder/Ecssen_Azure/tree/master/ECSSENPro_Azure" target="_blank">Demo</a>
+                <a href="https://youtu.be/-_b8IcrY3Jc" target="_blank">Demo</a>
                 <a href="https://github.com/rav-coder/Ecssen_Azure/tree/master/ECSSENPro_Azure" 
                     target="_blank" id="code-link">Code</a>
             </section>
@@ -134,6 +134,24 @@
 
             <!-- <section> block to add more projects. -->
                 <section class="project-item">
+                    <img src="images/python.jpg" alt="python-project">
+                    <h3>100 Days of Code</h3>
+                    <p>
+                        <!-- <span class="lang-internal"> HTML5</span>
+                            <span class="lang-internal"> CSS3</span>
+                            <span class="lang-internal"> JavaScript</span> -->
+                        <span class="lang-internal"> Python</span>
+                    </p>
+                    <p>
+                        Various projects using OOP, GUI, API, pandas, smtplib, beautifulsoup, selenium.
+                    </p>
+                    <a href="https://github.com/rav-coder/100_Python_Projects" 
+                        target="_blank" id="code-link" style="margin-left: 0;">Code</a>
+                </section>
+            <!-- End of Project block. -->
+
+            <!-- <section> block to add more projects. -->
+                <section class="project-item">
                     <img src="images/tictac.jpg" alt="tic-tac-project">
                     <h3>Tic-Tac-Toe</h3>
                     <p>
@@ -152,23 +170,7 @@
                 </section>
                 <!-- End of Project block. -->
             
-            <!-- <section> block to add more projects. -->
-                <section class="project-item">
-                    <img src="images/python.jpg" alt="python-project">
-                    <h3>100 Days of Code</h3>
-                    <p>
-                        <!-- <span class="lang-internal"> HTML5</span>
-                            <span class="lang-internal"> CSS3</span>
-                            <span class="lang-internal"> JavaScript</span> -->
-                        <span class="lang-internal"> Python</span>
-                    </p>
-                    <p>
-                        Various projects using OOP, GUI, API, pandas, beautifulsoup.
-                    </p>
-                    <a href="https://github.com/rav-coder/100_Python_Projects" 
-                        target="_blank" id="code-link" style="margin-left: 0;">Code</a>
-                </section>
-            <!-- End of Project block. -->
+
 
             <!-- <section> block to add more projects. -->
                 <section class="project-item">
@@ -185,6 +187,24 @@
                         User login, signup and note-taking (CRUD) features.
                     </p>
                     <a href="https://github.com/rav-coder/Notetaker_Django" 
+                        target="_blank" id="code-link" style="margin-left: 0;">Code</a>
+                </section>
+            <!-- End of Project block. -->
+
+            <!-- <section> block to add more projects. -->
+                <section class="project-item">
+                    <img src="images/rest.jpg" alt="rest-project">
+                    <h3>RESTful API</h3>
+                    <p>
+                            <span class="lang-internal"> MongoDB</span>
+                            <span class="lang-internal"> Express</span>
+                            <span class="lang-internal"> Node.js</span>
+                    </p>
+                    <p>
+                        Access and update student information by performing CRUD operations on a MongoDB database. 
+                    </p>
+                    <a href="https://youtu.be/A5Yi3kAfB8g" target="_blank">Demo</a>
+                    <a href="https://github.com/rav-coder/restAPI" 
                         target="_blank" id="code-link" style="margin-left: 0;">Code</a>
                 </section>
             <!-- End of Project block. -->
@@ -299,7 +319,7 @@
             </ul>
         </footer>
     </div>
-    <div class="bottom-tab">-</div>
+    <div class="bottom-tab">&nbsp;</div>
 </body>
 
 </html>
